--- a/static/style.css
+++ b/static/style.css
@@ -82,11 +82,11 @@ body {
     align-items: center;
     justify-content: center;
     flex-grow: 1;
-    min-width: 50px;
+    /* min-width: 50px; */
     overflow: hidden;
     white-space: nowrap;
     font-family: sans-serif;
-    font-size: 13px;
+    font-size: 16px;
     color: #444444;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
@@ -102,5 +102,5 @@ body {
 }
 
 .nav__icon {
-    font-size: 18px;
+    font-size: 26px;
 }
