Removed bug that made camera activate on page opening. Possibly solved scanner issue.

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,9 @@
             <i class="ri-home-6-line"></i>
             <span class="nav__text">Vinci Casa</span>
         </a>
-
+        
+        <!-- TODO: Make archive pop out from nav link. Clean Bottom to top animation, reversed when clicking again.
+        button has to change color when active.-->
         <a href="archive.html" class="nav__link">
             <i class="ri-wallet-3-line"></i>
             <span class="nav__text">Archivio</span>
@@ -107,6 +109,7 @@
         aspectRatio: 1
     });
     let currentGame;
+    
     scanner.render(success, error);
 </script>
 
