Roughly fixed bug that kept camera active on game switch.

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
             <span class="nav__text">Classico</span>
         </a>
 
-        <a class="nav__link nav__link" onclick="setActive(this); showHidden()">
+        <a class="nav__link" onclick="setActive(this); showHidden()">
             <i class="ri-building-4-line"></i>
             <span class="nav__text">Grattacieli</span>
         </a>
