--- a/static/style.css
+++ b/static/style.css
@@ -54,10 +54,25 @@
     cursor: pointer;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
+.popupArchive {
+    background: #ddd;
+    border-radius: 6px;
+    position: absolute;
+    top: 98%;
+    left: 98%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition: 0.4s, top 0.4s;
+    z-index: 100;
+}
 
 .open-popup {
     visibility: visible;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%) scale(1);
 }
 
@@ -70,8 +85,8 @@ body {
     bottom: 0;
     width: 100%;
     height: 55px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    background-color: #ffffff;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.9);
+    background-color: #fff;
     display: flex;
     overflow-x: auto;
 }
@@ -87,14 +102,14 @@ body {
     white-space: nowrap;
     font-family: sans-serif;
     font-size: 16px;
-    color: #444444;
+    color: #111;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
     transition: background-color 0.1s ease-in-out;
 }
 
 .nav__link:hover {
-    background-color: #eeeeee;
+    background-color: #ddd;
 }
 
 .nav__link--active {
@@ -104,3 +119,8 @@ body {
 .nav__icon {
     font-size: 26px;
 }
+
+.activeArchive {
+    color: #009578;
+}
+
