Minor language changes, made archive disappear on game click.

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,9 +48,9 @@
             <table id="winArchive" class="table">
                 <thead>
                     <tr>
-                        <th>Tipologia Gioco</th>
+                        <th>Gioco</th>
                         <th>Concorso</th>
-                        <th>Codice Schedina</th>
+                        <th>Codice</th>
                         <th>Vincita</th>
                     </tr>
                 </thead>
