Completed previous commit.

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
 
     <div class="centered-text rounded">
-        <h1 class="rounded" style="background-color: #007E47; color:white"> Verifica vincite Win For Life </h1>
+        <h1 id="head" class="rounded" style="background-color: #007E47; color:white"> Verifica Vincite Win For Life </h1>
     </div>
 
     <div class="flex-container">
