--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
 
 
     <div class="centered-text rounded">
-        <h1 id="head" class="rounded" style="background-color: #007E47; color:white"> Verifica Vincite Win For Life </h1>
+        <h1 id="head" class="rounded" style="background-color: #007E47; color:white"> Verifica Vincite Win For Life
+        </h1>
     </div>
 
     <div class="flex-container">
@@ -38,7 +39,7 @@
         </div>
         <div class="container">
             <main class="rounded readerSize" id="qrReader" hidden>
-                <div id="reader" class="rounded"></div>
+                <div id="reader" class="rounded forcesize"></div>
                 <div id="result"></div>
             </main>
         </div>
