Added game detection capability. Removed bloat.

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,19 +64,8 @@
     <nav class="nav">
         <a class="nav__link" onclick="setActive(this); showHidden()">
             <i class="ri-money-euro-box-line"></i>
-            <span class="nav__text">Classico</span>
+            <span class="nav__text">Scanner</span>
         </a>
-
-        <a class="nav__link" onclick="setActive(this); showHidden()">
-            <i class="ri-building-4-line"></i>
-            <span class="nav__text">Grattacieli</span>
-        </a>
-
-        <a class="nav__link" onclick="setActive(this); showHidden()">
-            <i class="ri-home-6-line"></i>
-            <span class="nav__text">Vinci Casa</span>
-        </a>
-
 
         <a id="archiveButton" class="nav__link" onclick="toggleArchive()">
             <i class="ri-wallet-3-line"></i>
