Added "waiting for response" case to result.

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <div id="popup" class="popup">
             <img id="outcome" />
             <h2 id="win-message"></h2>
-            <p>Vuoi aggiungere questa schedina al tuo archivio?</p>
+            <p id="dialogue-msg"></p>
             <div class="flex-container-row">
                 <button id="addButton" type="button" class="btn btn-outline-success flex-fill"
                     onclick="closePopup(true);">Aggiungi</button>
